[package]
name = "extend_mut"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"
description = "A library for extending exclusive references."
documentation = "https://docs.rs/extend_mut"
repository = "https://github.com/Ddystopia/extend_mut"
license = "MIT OR Apache-2.0"
authors = ["Ddystopia <alexanderbabak@proton.me>"]

[dependencies]
pin-project-lite = "0.2.16"
