[package]
name = "extend_mut"
version = "0.2.0"
edition = "2021"
rust-version = "1.78.0"
description = "A library for extending exclusive references."
documentation = "https://docs.rs/extend_mut"
repository = "https://github.com/Ddystopia/extend_mut"
license = "MIT OR Apache-2.0"
authors = ["Ddystopia <alexanderbabak@proton.me>"]
keywords = ["no_std", "borrowck", "async", "lifetime", "static"]

[dependencies]
pin-project-lite = "0.2.16"

[features]
default = ["std"]
std = []
